# SpectraCLI

./: .gitignore  README.md  install.sh  pyproject.toml  setup.py
spectra/: __init__.py  capture.py  cli.py  mirror_window.py  network.py  server.py  tui.py
